--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,19 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="others_message_color">#CDCDCD</color>
+    <color name="my_message_color">#b9d4ff</color>
+
+    <color name="palette_amber">#f9a857</color>
+    <color name="palette_tangerine">#ec7b75</color>
+    <color name="palette_siena">#fb5502</color>
+    <color name="palette_crimson">#fb2046</color>
+    <color name="palette_fuchsia">#d73cea</color>
+    <color name="palette_lilac">#9135e0</color>
+    <color name="palette_mauve">#961f8c</color>
+    <color name="palette_purple">#5e2495</color>
+    <color name="palette_blue">#5848f4</color>
+    <color name="palette_skyblue">#05c1fd</color>
+    <color name="palette_green">#18d68c</color>
+    <color name="palette_lemonyellow">#fcf84a</color>
 </resources>
