--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,19 +13,19 @@
 
 
     <ProgressBar
-        android:id="@+id/loading"
+        android:id="@+id/loading_register"
         android:layout_width="83dp"
         android:layout_height="32dp"
         android:layout_gravity="center"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/user_id"
+        app:layout_constraintBottom_toTopOf="@+id/user_id_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
-        android:id="@+id/user_id"
+        android:id="@+id/user_id_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/password_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -71,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintTop_toBottomOf="@+id/password_register"
         app:layout_constraintVertical_bias="0.025" />
 
     <EditText
@@ -87,6 +87,6 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_id" />
+        app:layout_constraintTop_toBottomOf="@+id/user_id_register" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
