--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
     <color name="others_message_color">#DDDDDD</color>
     <color name="my_message_color">#b9d4ff</color>
 
@@ -18,4 +19,8 @@
     <color name="palette_skyblue">#05c1fd</color>
     <color name="palette_green">#18d68c</color>
     <color name="palette_lemonyellow">#fcf84a</color>
+
+    <color name="light_gray">#DDDDDD</color>
+    <color name="light_dark_gray">#979797</color>
+    <color name="dark_gray">#555555</color>
 </resources>
