--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -29,7 +29,8 @@
 
         <EditText
             android:id="@+id/messageText"
-            android:layout_width="347dp"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/new_message_hint"
@@ -39,11 +40,13 @@
 
         <ImageButton
             android:id="@+id/sendButton"
-            android:layout_width="43dp"
-            android:layout_height="45dp"
+            android:layout_width="44dp"
+            android:layout_weight="0.1"
+            android:layout_height="44dp"
+            android:gravity="end"
             android:background="?selectableItemBackgroundBorderless"
-            app:srcCompat="@android:drawable/ic_menu_send"
-            android:contentDescription="@string/send_message_button" />
+            android:contentDescription="@string/send_message_button"
+            app:srcCompat="@android:drawable/ic_menu_send" />
 
     </LinearLayout>
 
