--- a/app/src/main/res/layout/activity_find_users.xml
+++ b/app/src/main/res/layout/activity_find_users.xml
@@ -17,6 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
+        <TextView
+            android:id="@+id/no_matching_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:visibility="gone"
+            android:text="@string/no_matching_entries" />
+        <TextView
+            android:id="@+id/not_enough_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/minimum_chars" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
